# udf_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.trae/documents/: udf-tools-github-cli-plan.md  upload-to-github-plan.md
udf_tools/: __init__.py  cli_crc.py  cli_dump.py  cli_rename.py  cli_volume.py
udf_tools/original/: py-crc.py  py-file-structure.py  py-renamefile.py  py-volume-structure.py
