[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udf-tools"
version = "1.0.0"
description = "UDF file system parsing, analysis, CRC repair, and FID renaming CLI tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "UDF Tools Author", email = "your@email.com"},
]
keywords = ["udf", "filesystem", "forensics", "ecma-167"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "wcwidth>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourname/udf-tools"
Repository = "https://github.com/yourname/udf-tools.git"
Issues = "https://github.com/yourname/udf-tools/issues"

[project.scripts]
udf-dump = "udf_tools.cli_dump:main"
udf-rename = "udf_tools.cli_rename:main"
udf-crc = "udf_tools.cli_crc:main"
udf-volume = "udf_tools.cli_volume:main"

[tool.setuptools.packages.find]
include = ["udf_tools*"]

[tool.setuptools.package-data]
udf_tools = ["original/*.py"]